--- a/session2/index.html
+++ b/session2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Basic home page</title>
 	<meta charset="utf-8">
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-		<div class="header">
+		<div class="header" style="padding: 50px;">
 
-			<img src="images/photo.jpg"><h1><pre><i>  Lakshmi HS</i></pre></h1>
+			<img src="images/photo.jpg" alt="photo"><pre><h1> <i>Lakshmi HS</i></h1></pre>
 		</div>
 
 		<div class="navbar">
@@ -23,7 +23,7 @@
 
 		<div class="row">
 			<div class="column side"><h4><i>Contents</i></h4><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, .</p></div>
-			<div class="column middle"><img src="images/Hero-Banner-without-text-GIF.gif" width="800px"></div>
+			<div class="column middle"><img src="images/Hero-Banner-without-text-GIF.gif" width="800" alt="a gif"></div>
 			<div class="column side"><p><i>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</i></p>
 			</div>
 		</div>
