--- a/session2/index.html
+++ b/session2/index.html
@@ -21,7 +21,7 @@
 			</ul>
 		</div>
 
-		<div class="row">
+		<!--<div class="row">
 			<div class="column side"><h4><i>Contents</i></h4><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, .</p></div>
 			<div class="column middle"><img src="images/Hero-Banner-without-text-GIF.gif" width="800" alt="a gif"></div>
 			<div class="column side"><p><i>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</i></p>
@@ -33,4 +33,33 @@
 		</div>
 
 </body>
+</html>-->
+
+
+
+	<div class="flex-wrapper">
+  <div class="wrapper-left">
+  	<h2>Videos</h2>
+  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  </div>
+  <div class="wrapper-center">
+  	<h2>Videos</h2>
+  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  </div>
+   <div class="wrapper-right">
+  	<h2>Videos</h2>
+  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  </div>
+</div>
+
+
+		<div class="footer">
+			<h4>Designed by Lakshmi</h4>
+		</div>
+	</div>
+</head>
+<body>
+
+</body>
 </html>
+ 
