--- a/session2/index.html
+++ b/session2/index.html
@@ -39,15 +39,18 @@
 
 	<div class="flex-wrapper">
   <div class="wrapper-left">
-  	<h2>Videos</h2>
+  	<h2>side bar</h2>
+  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
   	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
   </div>
   <div class="wrapper-center">
-  	<h2>Videos</h2>
-  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  	<h2>main content</h2>
+  	<img src="images/main.jpg" width="400 300" alt="image">
   </div>
    <div class="wrapper-right">
-  	<h2>Videos</h2>
+  	<h2>side bar</h2>
   	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
   </div>
 </div>
