--- a/session2/index.html
+++ b/session2/index.html
@@ -47,7 +47,7 @@
   </div>
   <div class="wrapper-center">
   	<h2>main content</h2>
-  	<img src="images/main.jpg" width="400 300" alt="image">
+  	<img src="images/Blank-600-x-900-371.jpg" width="400" height="300" alt="image">
   </div>
    <div class="wrapper-right">
   	<h2>side bar</h2>
