--- a/session2/playlist.html
+++ b/session2/playlist.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>audio and video</title>
 	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="playlist.css">
 </head>
 <body>
-	<div class="container">
-		<div class="header">
+  <div class="container">
+		
+    <div class="header">
 			<h1 style="text-align: center;"><i>Playlist</i></h1>
 		</div>
 
@@ -22,22 +23,22 @@
 		</div>
 
 		<div class="flex-container">
-  <div class="flex-item-left">
-  	<h2>Audios</h2>
-  	<audio controls>
-  		<source src="audios/Soft Inspirational Background Music.mp3" type="audio/mp3">
-  	</audio>
-  	<audio controls>
-  		<source src="audios/SampleAudio_0.4mb.mp3" type="audio/mp3">
-  	</audio>
-  	<audio controls>
-  		<source src="audios/file_example_MP3_700KB.mp3" type="audio/mp3">
-  	</audio>
-  	<audio controls>
-  		<source src="audios/SampleAudio_0.4mb.mp3" type="audio/mp3">
-  	</audio>
-  	
-  </div>
+      <div class="flex-item-left">
+        <h2>Audios</h2>
+        <audio controls>
+          <source src="audios/Soft Inspirational Background Music.mp3" type="audio/mp3">
+          </audio>
+          <audio controls>
+            <source src="audios/SampleAudio_0.4mb.mp3" type="audio/mp3">
+          </audio>
+          <audio controls>
+            <source src="audios/file_example_MP3_700KB.mp3" type="audio/mp3">
+          </audio>
+          <audio controls>
+            <source src="audios/SampleAudio_0.4mb.mp3" type="audio/mp3">
+          </audio>
+        </div>
+
   <div class="flex-item-right">
   	<h2>Videos</h2>
   	<video width="400" height="280" controls>
@@ -52,7 +53,6 @@
   	<video width="400" height="280" controls>
       <source src="videos/SampleVideo_1280x720_1mb.mp4" type="video/mp4">
     </video>
-  	
   </div>
 </div>
 
@@ -61,8 +61,8 @@
 			<h4>Designed by Lakshmi</h4>
 		</div>
 	</div>
-</head>
-<body>
 
+
+</head>
 </body>
 </html>
