--- a/session2/index.html
+++ b/session2/index.html
@@ -7,62 +7,48 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-		<div class="header" style="padding: 50px;">
+	<div class="header" style="padding: 50px;">
+		<img src="images/photo.jpg" alt="photo"><pre><h1> <i>Lakshmi HS</i></h1></pre>
+	</div>
 
-			<img src="images/photo.jpg" alt="photo"><pre><h1> <i>Lakshmi HS</i></h1></pre>
-		</div>
-
-		<div class="navbar">
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="player.html">Youtube player</a></li>
-				<li><a href="location.html">Location</a></li>
-				<li><a href="playlist.html">Playlist</a></li>
-			</ul>
-		</div>
-
-		<!--<div class="row">
-			<div class="column side"><h4><i>Contents</i></h4><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, .</p></div>
-			<div class="column middle"><img src="images/Hero-Banner-without-text-GIF.gif" width="800" alt="a gif"></div>
-			<div class="column side"><p><i>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</i></p>
-			</div>
-		</div>
-
-		<div class="footer">
-			<h4>Designed by Lakshmi</h4>
-		</div>
-
-</body>
-</html>-->
-
-
+	<div class="navbar">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="player.html">Youtube player</a></li>
+			<li><a href="location.html">Location</a></li>
+			<li><a href="playlist.html">Playlist</a></li>
+		</ul>
+	</div>
 
 	<div class="flex-wrapper">
-  <div class="wrapper-left">
-  	<h2>side bar</h2>
-  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
-  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
-  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
-  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
-  </div>
-  <div class="wrapper-center">
-  	<h2>main content</h2>
-  	<img src="images/photo.jpg" width="400" height="300" alt="image">
-  </div>
-   <div class="wrapper-right">
-  	<h2>side bar</h2>
-  	Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
-  </div>
-</div>
+		<div class="wrapper-left">
+			<h2>side bar</h2>
+  				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  		</div>
 
+  		<div class="wrapper-center">
+  			<h2>main content</h2>
+  				<!--Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee-->
+  				<img src="images/main.jpg" width="400 300" alt="main image">
+  		</div>
 
-		<div class="footer">
-			<h4>Designed by Lakshmi</h4>
-		</div>
-	</div>
+  		<div class="wrapper-right">
+  			<h2>side bar</h2>
+  				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has bee
+  		</div>
+  	</div>
+
+  	<div class="footer">
+  		<h4>Designed by Lakshmi</h4>
+  	</div>
+
 </head>
-<body>
-
 </body>
 </html>
  
