--- a/SESSION3/calculator.html
+++ b/SESSION3/calculator.html
@@ -23,7 +23,7 @@
             <button class="button operator">/</button>
             <button class="button operator" >+</button>
             <button class="button operator percent">%</button>
-            <button class="button resetBtn" style="background-color: lightgray;">AC</button>
+            <button class="button resetBtn" style="background-color: lightgray;">CE</button>
             <button class="button number dot">.</button>
             <button class="button  operator" style="background-color: lightgreen; color: black;">=</button>
 </div>
